data/derived/fa15/progs/unify/prog0247.ml.out
Characters 155-156:
  | Average(c,d) -> c +. d/.2
                    ^
Error: This expression has type expr but an expression was expected of type
         float
